<resources>
    <string name="app_name">Smart Mobile - Switch Clone</string>

    <string name="splash_text">
        <font color='#42C6FF'> Smart Mobile - Switch Clone </font>
        <font color='#42C6FF'></font>
    </string>


    <string name="pp">By continuing you agree to our\n Terms and Conditions\n
        and <u>Privacy Policy.</u></string>
    <string name="privacyPolicy">
      <b>Privacy Policy</b>\n

 The purpose of this page is to describe our practices about collection, use and disclosure of user personal data. We are committed not to use and share information with anyone or else define in this privacy policy.\n

        \n<b>TYPE OF INFORMATION COLLECTION:</b>\n

    \n<b>Personal information:</b>\n

We don\’t gather personal information. It is an information that recognize you or another person, that may be transferred or acquired upon use of application, services and/or the website. Personal information comprises of name, address, phone, fax, SSN, email address, geographical position, information saved in device or information transfer or receive using the application, service or site.\n


    \n<b>Non Personal information:</b>\n
We may gather non-personal information regarding user when they intermingle with our applications. Non personal information consist of information regarding your devices, lists of app that are installed on device, technical information about user with an interaction with our application, like model and version of phone and other relevant information.  \n

        \n<b>COLLECTION OF INFORMATION:</b>\n

    \n<b>Personal information:</b>\n
  We don’t gather personal information; also don’t use them by any means. \n


    \n<b>Non- Personal Information</b>\n
Non-Personal Information can be use purposes mention below:\n
        (1) We may use your Non- Personal Information to personalize user experiences in order to let know about interest of customer, know demographics and other trends.\n
(2) We may use Non- Personal Information to recuperate services, maintain, improve, provide and adjust the Applications, Services and the Site and progress new services.\n
(3) We may use non-personal information for marketing and advertisement purposes. \n
        \n<b>DISCLOSURE OF INFORMATION:</b>\n

    \n<b>Personal information:</b>\n
  We generally we use data usage and session give services to our user, and utilize the application, site and services to take maximum leverage. We don’t keep personal information hence we don’t reveal your personal information. \n



    \n<b>Non-Personal Information:</b>\n
 We may reveal Non-personal information to our reliable partner who will obey with privacy policy and other related privacy news. We don’t associate non-personal information with personal information. \n

        \n<b>Third party services:</b>\n
  To postulate services to user we may use wide range of third party services.  We don’t have any right or control over third party services or websites. Any link to website and service appears in apps doesn’t mean we encourage them or practice user’s relevant information.\n



    \n<b>Children’s privacy policy:</b>\n
We don’t deliberately gather personally identifiable information anyone under age of 13. If you are parent or guardian be aware that children has provided us with personal data please let us know. We are oblige to remove any information from our services if we came to know that data is gather from children without permission of parents.\n


    \n<b>Security:</b>\n
 We are dedicated in protection of your Personal Information, as you trust in giving us your personal information. However, please be aware that no transaction method on Internet is 100 secure altogether and we don’t assure ultimate security.\n

        \n<b>Permissions in our Application:</b>\n
•	Microphone:\n

We don’t keep any recordings or use information for our own purpose. We use this permission to convert voice into text.\n

•	Contacts:\n

We may inquire user to permit list of contacts for reaching contact list and its use in application. We can’t save contacts for any other purpose.\n



•	Camera:\n

We are using camera permissions for user to capture pictures for editing purpose and other user needs.\n

•	Internet Access:\n

We use this permission to acquired resources from server such as check network connection, photo effect and photo frame.\n


•	Storage:\n

      In order to store work in SD card we use this permission in our application.\n


•	Notification:\n

To obtain text from notification we ask user to permit notifications.\n



    \n<b>Contact us:</b>\n
 For more queries and information contact us at



</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app">App</string>
    <string name="music">Music</string>
    <string name="image">Images</string>
    <string name="videos">Videos</string>
    <string name="files">Files</string>
    <string name="file_transfer">File Transfer</string>
    <string name="share_selected_file">Share selected files</string>
    <string name="phone_clone">Phone Clone</string>
    <string name="smart_switch">Easy Switch</string>
    <string name="pro_detail">* Ad free experience\n* Unlimited transfer</string>
    <string name="no_commitment">No Commitment / Cancel Anytime</string>
    <string name="share_all_data">Share all data</string>
    <string name="send_data">Send data</string>
    <string name="recieve_data">Receive data</string>
    <string name="recieve_file">Receive files</string>
    <string name="select_files">Select files</string>
    <string name="file_selected">file selected</string>
    <string name="contacts">Contacts</string>
    <string name="all">All</string>
    <string name="no_apps">No apps found</string>
    <string name="no_contacts">No contact found</string>
    <string name="no_files">No file found</string>
    <string name="no_images">No image found</string>
    <string name="no_music">No music found</string>
    <string name="no_video">No video found</string>
    <string name="show_files">Show Files</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="view">View</string>
    <string name="open">Open</string>
    <string name="received_file">Received files</string>
    <string name="history">History</string>
    <string name="history_desc">Discover received files</string>
    <string name="unable_to_open">Unable to open</string>
    <string name="no_transfer_history">No transfer history</string>
    <plurals name="item_count">
        <item quantity="one">Selected file (%1$s)</item>
        <item quantity="other">Selected files (%1$s)</item>
    </plurals>
    <string name="str_agree_and_continue">Agree &amp; Continue</string>
    <string name="grant_permission_detail">
    <b>Smart Mobile Switch uses these Permissions\n to Successfully Transfer data:</b>\n\n
    <b>Storage:</b>\nUsed to transfer images,\n audios, videos, and files.\n\n
    <b>Camera:</b>\nTo scan QR code.\n\n
    <b>Apps:</b>\nTo transfer applications.\n\n
    <b>Contact:</b>\nTo transfer contacts.\n\n
    <b>Location:</b>\nTo find nearby devices.\n
</string>
    <string name="popup_text">Smart Mobile Switch facilitates you in duplicating your file and more if you give the permission to access your files and information of the installed application. In order to share your files to nearby phone. Smart switch require permission to access your location. Smart switch may also collect the information of your device in order to ensure account security and detect internet</string>
    <string name="privacy_policy_underline"><u>Privacy Policy</u></string>
    <string name="file_corrupted">File corrupted</string>
    <string name="version">Version</string>

    <string name="appId">ca-app-pub-2924386003273380~8421458998</string>
    <string name="app_open">ca-app-pub-2924386003273380/8502780663</string>
    <string name="app_open_debug">ca-app-pub-3940256099942544/9257395921</string>
    <string name="banner">ca-app-pub-2924386003273380/8549364116</string>
    <string name="bannerTest">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial">ca-app-pub-2924386003273380/24952683</string>
    <string name="nativeAd">ca-app-pub-2924386003273380/5337889171</string>
    <string name="nativeAdTest">ca-app-pub-3940256099942544/2247696110</string>

    <string name="yandexId">19250638</string>
    <string name="interstitialYandex">R-M-19250638-2</string>
    <string name="bannerYandex">R-M-19250638-3</string>
    <string name="appOpenYandex">R-M-19250638-4</string>
    <string name="nativeYandex">R-M-18452785-4</string>
    <string name="interstitialYandexTest">demo-interstitial-yandex</string>
    <string name="bannerYandexTest">demo-banner-yandex</string>
    <string name="appOpenYandexTest">demo-appopenad-yandex</string>
    <string name="nativeYandexTest">demo-native-app-yandex</string>

    <string name="restart">Restart</string>
    <string name="update_downloaded">Update downloaded</string>
    <string name="permission_denied">Permission denied</string>
    <string name="later">Later</string>
    <string name="grant">Grant</string>
    <string name="permission_desc">Necessary permission are denied. Grant them from settings to use app.</string>
    <string name="settings">Settings</string>
    <string name="dismiss">Dismiss</string>
    <string name="welcome_to">Smart Mobile Switch Clone</string>
    <string name="title">Title</string>
    <string name="description">Send your data from this phone to any phone. \n
Transfer Images Videos Files Contacts and\n
Apps to your New Phone.
</string>
    <string name="splash_title">Smart Mobile Switch\nClone</string>
    <string name="wifi_name">Wifi Name</string>
    <string name="share">Share</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="agree_and_continue">Agree and Continue</string>
</resources>