<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ic_corner_round"
    android:minWidth="@dimen/_250sdp"
    android:minHeight="@dimen/_200sdp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/ic_top_corner"
        android:gravity="center"
        android:text="@string/permission_denied"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_72sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:src="@drawable/ic_exit"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:gravity="center"
        android:text="@string/permission_desc"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toTopOf="@+id/no"
        app:layout_constraintEnd_toEndOf="@+id/yes"
        app:layout_constraintStart_toStartOf="@+id/no"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <Button
        android:id="@+id/no"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_margin="15dp"
        android:background="@drawable/ic_round_button"
        android:text="@string/dismiss"
        android:textSize="@dimen/_10ssp"
        app:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/yes"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/yes"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_margin="15dp"
        android:background="@drawable/ic_round_button"
        android:text="@string/settings"
        android:textSize="@dimen/_10ssp"
        app:backgroundTint="@color/app_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/no" />

</androidx.constraintlayout.widget.ConstraintLayout>